--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -25,7 +25,7 @@
 }
 
 .navbar-links li a {
-  color: white;
+  color: rgb(0, 0, 0);
   text-decoration: none;
   font-size: 18px;
   font-weight: 500;
@@ -33,7 +33,7 @@
 }
 
 .navbar-links li a:hover {
-  color: #000000;
+  color: #656565;
 }
 
 
